--- a/web/default.conf
+++ b/web/default.conf
@@ -1,9 +1,37 @@
-# Instana tracing
-opentracing_load_tracer /usr/local/lib/libinstana_sensor.so /etc/instana-config.json;
-opentracing_propagate_context;
+user www-data;
+worker_processes 4;
+pid /var/run/nginx.pid;
+
+events {
+  workder_connections 768;
+}
+
+http {
+
+send file on;
+tcp_nopush on;
+tcp_nodelay on;
+keepalive_timeout 65;
+types_hash_max_size 2048;
+large_client_header_buffers 6 32k;
+client_max_body_size 100m;
+
+include /etc/nginx/mime.types;
+default_type application/octet-stream;
+
+access_log /var/log/nginx/access.log;
+error_log /var/log/nginx/error.log debug;
+
+gzip on;
+gzip_disable "msie6";
+
+
+include /etc/nginx/conf.d/*.conf;
+include /etc/nginx/sites-enabled/*;
+
 
 server {
-    listen       8080;
+    listen       80;
     server_name  localhost;
 
     proxy_http_version 1.1;
@@ -58,28 +86,28 @@ server {
     #}
 
     location /api/catalogue/ {
-        proxy_pass http://${CATALOGUE_HOST}:8080/;
+        proxy_pass http://catalogue:8080/;
     }
 
-    location /api/user/ {
-        proxy_pass http://${USER_HOST}:8080/;
-    }
+    # location /api/user/ {
+    #     proxy_pass http://${USER_HOST}:8080/;
+    # }
 
-    location /api/cart/ {
-        proxy_pass http://${CART_HOST}:8080/;
-    }
+    # location /api/cart/ {
+    #     proxy_pass http://${CART_HOST}:8080/;
+    # }
 
-    location /api/shipping/ {
-        proxy_pass http://${SHIPPING_HOST}:8080/;
-    }
+    # location /api/shipping/ {
+    #     proxy_pass http://${SHIPPING_HOST}:8080/;
+    # }
 
-    location /api/payment/ {
-        proxy_pass http://${PAYMENT_HOST}:8080/;
-    }
+    # location /api/payment/ {
+    #     proxy_pass http://${PAYMENT_HOST}:8080/;
+    # }
 
-    location /api/ratings/ {
-        proxy_pass http://${RATINGS_HOST}:80/;
-    }
+    # location /api/ratings/ {
+    #     proxy_pass http://${RATINGS_HOST}:80/;
+    # }
 
     location /nginx_status {
         stub_status on;
