--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,3 +4,4 @@ RUN rm -rf /etc/nginx/nginx.conf
 RUN rm -rf /ect/nginx/conf.d/default.conf
 COPY default.conf  /etc/nginx/nginx.conf
 ADD static /usr/share/nginx/html/
+ENV CATALOGUE_HOST="catalogue"
