--- a/web/default.conf
+++ b/web/default.conf
@@ -85,9 +85,9 @@ server {
     #    deny  all;
     #}
 
-    # location /api/catalogue/ {
-    #     proxy_pass http://catalogue:8080/;
-    # }
+    location /api/catalogue/ {
+        proxy_pass http://catalogue:8080/;
+    }
 
     location /api/user/ {
         proxy_pass http://user:8080/;
