--- a/web/default.conf
+++ b/web/default.conf
@@ -4,33 +4,48 @@ pid /var/run/nginx.pid;
 
 events {
   worker_connections 768;
+  # multi_accept on;
 }
 
 http {
 
-sendfile on;
-tcp_nopush on;
-tcp_nodelay on;
-keepalive_timeout 65;
-types_hash_max_size 2048;
-large_client_header_buffers 6 32k;
-client_max_body_size 100m;
+  ##
+  # Basic Settings
+  ##
 
-include /etc/nginx/mime.types;
-default_type application/octet-stream;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  keepalive_timeout 65;
+  types_hash_max_size 2048;
+  large_client_header_buffers 6 32k;
+  client_max_body_size 100m;
 
-access_log /var/log/nginx/access.log;
-error_log /var/log/nginx/error.log debug;
+  # server_names_hash_bucket_size 64;
+  # server_name_in_redirect off;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-gzip on;
-gzip_disable "msie6";
+  ##
+  # Logging Settings
+  ##
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log debug; # change from debug to warn or error for production
 
+  ##
+  # Gzip Settings
+  ##
+  gzip on;
+  gzip_disable "msie6";
 
-include /etc/nginx/conf.d/*.conf;
-include /etc/nginx/sites-enabled/*;
+  ##
+  # Virtual Host Configs
+  ##
 
+  include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/sites-enabled/*;
 
-server {
+  server {
     listen       80;
     server_name  localhost;
 
@@ -62,29 +77,6 @@ server {
         root   /usr/share/nginx/html;
     }
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
-
     location /api/catalogue/ {
         proxy_pass http://catalogue:8080/;
     }
@@ -93,21 +85,21 @@ server {
         proxy_pass http://user:8080/;
     }
 
-    # location /api/cart/ {
-    #     proxy_pass http://${CART_HOST}:8080/;
-    # }
+    location /api/cart/ {
+        proxy_pass http://cart:8080/;
+    }
 
-    # location /api/shipping/ {
-    #     proxy_pass http://${SHIPPING_HOST}:8080/;
-    # }
+    location /api/shipping/ {
+        proxy_pass http://shipping:8080/;
+    }
 
-    # location /api/payment/ {
-    #     proxy_pass http://${PAYMENT_HOST}:8080/;
-    # }
+    location /api/payment/ {
+        proxy_pass http://payment:8080/;
+    }
 
-    # location /api/ratings/ {
-    #     proxy_pass http://${RATINGS_HOST}:80/;
-    # }
+    location /api/ratings/ {
+        proxy_pass http://ratings:80/;
+    }
 
     location /nginx_status {
         stub_status on;
