--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,3 +26,9 @@ services:
     - redis
   redis:
     image: redis
+  cart:
+    image: cart:v1
+    container_name: cart
+    depends_on:
+    - redis
+    - catalogue
