--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,6 @@
 FROM nginx
 RUN rm -rf /usr/share/nginx/html/
 RUN rm -rf /etc/nginx/nginx.conf
-RUN rm -rf /ect/nginx/conf.d/default.conf
+RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY default.conf  /etc/nginx/nginx.conf
 ADD static /usr/share/nginx/html/
-ENV CATALOGUE_HOST="catalogue"
