--- a/web/web.yaml
+++ b/web/web.yaml
@@ -17,7 +17,7 @@ spec:
         cpu: "100m"
         memory: "128Mi"
     ports:
-      containerPort: 80
+    - containerPort: 80
 
 ---
 apiVersion: v1
