--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -18,7 +18,7 @@ spec:
     imagePullPolicy: Always
     image: dockerswaha/catalogue:k8
     envFrom:
-    - configMaprRef:
+    - configMapRef:
         name: catalogue-config
     resources:
       requests:
