--- a/redis/manifest.yaml
+++ b/redis/manifest.yaml
@@ -1,29 +1,29 @@
+---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mongodb
+  name: redis
   labels:
-    name: mongodb
+    name: redis
     tier: db
 spec:
   containers:
-  - name: mongodb
+  - name: redis
     imagePullPolicy: Always
-    image: dockerswaha/mongodb:k8
+    image: redis
     ports:
-    - containerPort: 27017
-
+    - containerPort: 6379
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: redis
 spec:
   selector:
-    name: mongodb
+    name: redis
     tier: db
   ports:
   - protocol: TCP
-    port: 27017
-    targetPort: 27017
-  
+    port: 6379
+    targetPort: 6379
+---
